--- a/src/Bix/Mix/Bix.Mix.csproj
+++ b/src/Bix/Mix/Bix.Mix.csproj
@@ -11,9 +11,11 @@
     <AssemblyName>Bix.Mix</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <DontImportPostSharp>True</DontImportPostSharp>
     <ProductVersion>12.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
+    <DontImportPostSharp>True</DontImportPostSharp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PostSharp">
-      <HintPath>..\packages\PostSharp.3.0.35\lib\net20\PostSharp.dll</HintPath>
+      <HintPath>..\..\packages\PostSharp.3.0.35\lib\net20\PostSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,6 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Encapsulation\IEncapsulateProvider.cs" />
+    <Compile Include="Encapsulation\IEncapsulates.cs" />
+    <Compile Include="Encapsulation\IEncapsulator.cs" />
     <Compile Include="IMixer.cs" />
     <Compile Include="IMixes.cs" />
     <Compile Include="IMixProvider.cs" />
@@ -52,7 +57,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequiresPostSharp.cs" />
     <Compile Include="Validation\IValidates.cs" />
-    <Compile Include="Validation\IValidationProvider.cs" />
+    <Compile Include="Validation\IValidateProvider.cs" />
+    <Compile Include="Validation\IValidationRule.cs" />
     <Compile Include="Validation\IValidator.cs" />
     <Compile Include="Validation\ValidatesAttribute.cs" />
   </ItemGroup>
@@ -60,7 +66,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\PostSharp.3.0.35\tools\PostSharp.targets" Condition="Exists('..\packages\PostSharp.3.0.35\tools\PostSharp.targets')" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Import Project="..\..\packages\PostSharp.3.0.35\tools\PostSharp.targets" Condition="Exists('..\..\packages\PostSharp.3.0.35\tools\PostSharp.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
