--- a/src/Bix/Pix/ChiaTests/Bix.Pix.ChiaTests.csproj
+++ b/src/Bix/Pix/ChiaTests/Bix.Pix.ChiaTests.csproj
@@ -4,18 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F93ED35-44D0-46FF-9B51-D0E374104C3D}</ProjectGuid>
+    <ProjectGuid>{ADC04C03-9D94-4800-B9C3-9BE40FD716F9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bix.Mix</RootNamespace>
-    <AssemblyName>Bix.Mix</AssemblyName>
+    <RootNamespace>Bix.Pix.ChiaTests</RootNamespace>
+    <AssemblyName>Bix.Pix.ChiaTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProductVersion>12.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
-    <DontImportPostSharp>True</DontImportPostSharp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,39 +30,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PostSharp">
-      <HintPath>..\..\packages\PostSharp.3.0.35\lib\net20\PostSharp.dll</HintPath>
-    </Reference>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Encapsulate\IEncapsulateProvider.cs" />
-    <Compile Include="Encapsulate\IEncapsulates.cs" />
-    <Compile Include="Encapsulate\IEncapsulator.cs" />
-    <Compile Include="IMixer.cs" />
-    <Compile Include="IMixes.cs" />
-    <Compile Include="IMixProvider.cs" />
-    <Compile Include="MixContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequiresPostSharp.cs" />
-    <Compile Include="Validate\IValidates.cs" />
-    <Compile Include="Validate\IValidateProvider.cs" />
-    <Compile Include="Validate\IValidationRule.cs" />
-    <Compile Include="Validate\IValidator.cs" />
-    <Compile Include="Validate\ValidatesAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\..\Mix\Bix.Mix.csproj">
+      <Project>{6f93ed35-44d0-46ff-9b51-d0e374104c3d}</Project>
+      <Name>Bix.Mix</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Chia\Bix.Pix.Chia.csproj">
+      <Project>{6c242639-4017-4f4c-824e-f84079a5b015}</Project>
+      <Name>Bix.Pix.Chia</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <Import Project="..\..\packages\PostSharp.3.0.35\tools\PostSharp.targets" Condition="Exists('..\..\packages\PostSharp.3.0.35\tools\PostSharp.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
