--- a/src/Bix/Pix/Luffa/Bix.Pix.Luffa.csproj
+++ b/src/Bix/Pix/Luffa/Bix.Pix.Luffa.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A6523F85-9E3A-48FC-B374-6BE5D1FAC76E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Pix</RootNamespace>
-    <AssemblyName>Pix</AssemblyName>
+    <RootNamespace>Bix.Pix.Luffa</RootNamespace>
+    <AssemblyName>Bix.Pix.Luffa</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProductVersion>12.0.0</ProductVersion>
@@ -42,8 +42,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValidationProvider.cs" />
+    <Compile Include="ValidateProvider.cs" />
+    <Compile Include="ValidationRule.cs" />
     <Compile Include="Validator.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Mix\Bix.Mix.csproj">
+      <Project>{6f93ed35-44d0-46ff-9b51-d0e374104c3d}</Project>
+      <Name>Bix.Mix</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
