--- a/src/Bix/Pix/LuffaTests/Bix.Pix.LuffaTests.csproj
+++ b/src/Bix/Pix/LuffaTests/Bix.Pix.LuffaTests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Utility\AlwayFailRule.cs" />
     <Compile Include="ValidationRuleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
