--- a/src/Bix/Picks/Luffa/Bix.Picks.Luffa.csproj
+++ b/src/Bix/Picks/Luffa/Bix.Picks.Luffa.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A6523F85-9E3A-48FC-B374-6BE5D1FAC76E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bix.Pix.Luffa</RootNamespace>
-    <AssemblyName>Bix.Pix.Luffa</AssemblyName>
+    <RootNamespace>Bix.Picks.Luffa</RootNamespace>
+    <AssemblyName>Bix.Picks.Luffa</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProductVersion>12.0.0</ProductVersion>
