--- a/src/Bix/Mixers/CecilMixer/Bix.Mixer.CecilMixer.csproj
+++ b/src/Bix/Mixers/CecilMixer/Bix.Mixer.CecilMixer.csproj
@@ -4,16 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F93ED35-44D0-46FF-9B51-D0E374104C3D}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{F62BC726-DEC3-4E9C-B992-95FB66E6D582}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bix.Mix</RootNamespace>
-    <AssemblyName>Bix.Mix</AssemblyName>
+    <RootNamespace>Bix.Mixer.CecilMixer</RootNamespace>
+    <AssemblyName>Bix.Mixer.CecilMixer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProductVersion>12.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -33,7 +31,22 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mono.Cecil">
+      <HintPath>..\..\..\packages\Mono.Cecil.0.9.5.4\lib\net40\Mono.Cecil.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil.Mdb">
+      <HintPath>..\..\..\packages\Mono.Cecil.0.9.5.4\lib\net40\Mono.Cecil.Mdb.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil.Pdb">
+      <HintPath>..\..\..\packages\Mono.Cecil.0.9.5.4\lib\net40\Mono.Cecil.Pdb.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil.Rocks">
+      <HintPath>..\..\..\packages\Mono.Cecil.0.9.5.4\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,23 +56,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Encapsulate\EncapsulatedAttribute.cs" />
-    <Compile Include="Encapsulate\EncapsulatesAttribute.cs" />
-    <Compile Include="Encapsulate\IEncapsulateProvider.cs" />
-    <Compile Include="Encapsulate\IEncapsulates.cs" />
-    <Compile Include="Encapsulate\IEncapsulator.cs" />
-    <Compile Include="IMixer.cs" />
-    <Compile Include="IMixes.cs" />
-    <Compile Include="IMixProvider.cs" />
-    <Compile Include="MixContext.cs" />
+    <Compile Include="EncapsulateMixer.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validate\IValidates.cs" />
-    <Compile Include="Validate\IValidateProvider.cs" />
-    <Compile Include="Validate\IValidateRule.cs" />
-    <Compile Include="Validate\IValidator.cs" />
-    <Compile Include="Validate\ValidatesAttribute.cs" />
-    <Compile Include="Validate\IValidateRuleSource.cs" />
-    <Compile Include="Validate\AutoRegisterValidateRulesAttribute.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Mix\Bix.Mix.csproj">
+      <Project>{6f93ed35-44d0-46ff-9b51-d0e374104c3d}</Project>
+      <Name>Bix.Mix</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
