--- a/src/Bix/Mixers/CecilMixer/Bix.Mixers.CecilMixer.csproj
+++ b/src/Bix/Mixers/CecilMixer/Bix.Mixers.CecilMixer.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F62BC726-DEC3-4E9C-B992-95FB66E6D582}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bix.Mixer.CecilMixer</RootNamespace>
-    <AssemblyName>Bix.Mixer.CecilMixer</AssemblyName>
+    <RootNamespace>Bix.Mixers.CecilMixer</RootNamespace>
+    <AssemblyName>Bix.Mixers.CecilMixer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
