--- a/src/Bix/Mixers/CecilMixerTest/Bix.Mixers.CecilMixerTest.csproj
+++ b/src/Bix/Mixers/CecilMixerTest/Bix.Mixers.CecilMixerTest.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E21D6198-A359-402E-993F-93A5D7D5F17B}</ProjectGuid>
+    <ProjectGuid>{87C5AF5A-54EE-42F5-9385-DDE807A02CE9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bix.Picks.ChiaTests</RootNamespace>
-    <AssemblyName>Bix.Picks.ChiaTests</AssemblyName>
+    <RootNamespace>CecilMixerTest</RootNamespace>
+    <AssemblyName>CecilMixerTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -16,8 +16,6 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -52,7 +50,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="PropertyAccessibilityTest.cs" />
+    <Compile Include="EncapsulateTests\DtoTest.cs" />
+    <Compile Include="EncapsulateTests\IEncapsulatesImplementationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -60,9 +59,13 @@
       <Project>{6f93ed35-44d0-46ff-9b51-d0e374104c3d}</Project>
       <Name>Bix.Mix</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Chia\Bix.Picks.Chia.csproj">
-      <Project>{6c242639-4017-4f4c-824e-f84079a5b015}</Project>
-      <Name>Bix.Picks.Chia</Name>
+    <ProjectReference Include="..\CecilMixer\Bix.Mixers.CecilMixer.csproj">
+      <Project>{f62bc726-dec3-4e9c-b992-95fb66e6d582}</Project>
+      <Name>Bix.Mixers.CecilMixer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MixerTestTargets\Bix.Mixers.MixerTestTargets.csproj">
+      <Project>{e513a55d-f33b-4880-bc88-deb85aa6269f}</Project>
+      <Name>Bix.Mixers.MixerTestTargets</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
@@ -85,11 +88,6 @@
   </Choose>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
