--- a/src/Bix/Mixers/CecilMixerTest/Bix.Mixers.CecilMixerTest.csproj
+++ b/src/Bix/Mixers/CecilMixerTest/Bix.Mixers.CecilMixerTest.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{87C5AF5A-54EE-42F5-9385-DDE807A02CE9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CecilMixerTest</RootNamespace>
-    <AssemblyName>CecilMixerTest</AssemblyName>
+    <RootNamespace>Bix.Mixers.CecilMixerTest</RootNamespace>
+    <AssemblyName>Bix.Mixers.CecilMixerTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -70,6 +70,7 @@
     <Compile Include="EncapsulateTests\IEncapsulatesImplementationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReferenceAssemblyTest.cs" />
+    <Compile Include="Utility\Comparisons.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Mix\Bix.Mix.csproj">
