--- a/src/Bix/Mixers/MixerTestTargets/Bix.Mixers.MixerTestTargets.csproj
+++ b/src/Bix/Mixers/MixerTestTargets/Bix.Mixers.MixerTestTargets.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EncapsulatesTestType.cs" />
+    <Compile Include="NotEncapsulatedTestType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -54,7 +55,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"$(TargetDir)Bix.Mixers.CecilMixer.exe" "$(TargetPath)" "Bix.Mixers.MixerTestTargets.EncapsulatesTestType"</PostBuildEvent>
+    <PostBuildEvent>"$(TargetDir)Bix.Mixers.CecilMixer.exe" "$(TargetPath)"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
