--- a/src/Bix/Mixers/MixerTestTargetsReference/Bix.Mixers.MixerTestTargetsReference.csproj
+++ b/src/Bix/Mixers/MixerTestTargetsReference/Bix.Mixers.MixerTestTargetsReference.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EncapsulateTestType.cs" />
+    <Compile Include="NotEncapsulatedTestType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
