--- a/src/Bix/Mixers/CecilMixer/Bix.Mixers.CecilMixer.csproj
+++ b/src/Bix/Mixers/CecilMixer/Bix.Mixers.CecilMixer.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EncapsulateMixer.cs" />
+    <Compile Include="MixMixer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
