Migrated tests to NUnit. Some work on init (tests are broken)

--- a/src/Bix/Mix/Bix.Mix.csproj
+++ b/src/Bix/Mix/Bix.Mix.csproj
@@ -51,6 +51,7 @@
     <Compile Include="IMixer.cs" />
     <Compile Include="IMixes.cs" />
     <Compile Include="IMixProvider.cs" />
+    <Compile Include="InitializeResult.cs" />
     <Compile Include="MixContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validate\IValidates.cs" />
