--- a/src/Bix/Picks/Chia/Bix.Picks.Chia.csproj
+++ b/src/Bix/Picks/Chia/Bix.Picks.Chia.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>Bix.Picks.Chia</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <ProductVersion>12.0.0</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Mix\Bix.Mix.csproj">
-      <Project>{6f93ed35-44d0-46ff-9b51-d0e374104c3d}</Project>
+      <Project>{6F93ED35-44D0-46FF-9B51-D0E374104C3D}</Project>
       <Name>Bix.Mix</Name>
     </ProjectReference>
   </ItemGroup>
