--- a/src/Bix/Mix/Bix.Mix.csproj
+++ b/src/Bix/Mix/Bix.Mix.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MixesAttributeBase.cs" />
     <Compile Include="Encapsulate\EncapsulatedAttribute.cs" />
     <Compile Include="Encapsulate\EncapsulatesAttribute.cs" />
     <Compile Include="Encapsulate\IEncapsulateProvider.cs" />
