--- a/src/Bix/Mixers/CecilMixerTest/Bix.Mixers.CecilMixerTest.csproj
+++ b/src/Bix/Mixers/CecilMixerTest/Bix.Mixers.CecilMixerTest.csproj
@@ -86,6 +86,9 @@
       <Name>Bix.Mixers.MixerTestTargets</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CoreTests\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
