Add constructors. Working issue with bad type PEVerify

--- a/src/Bix/Mixers/CecilMixer/Bix.Mixers.CecilMixer.csproj
+++ b/src/Bix/Mixers/CecilMixer/Bix.Mixers.CecilMixer.csproj
@@ -90,6 +90,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommonMixing\MixesSource.cs" />
+    <Compile Include="CommonMixing\SerializableSource.cs" />
     <Compile Include="Core\EventImporter.cs" />
     <Compile Include="Core\EventMixer.cs" />
     <Compile Include="Core\EventWithRespectToModule.cs" />
