--- a/src/Bix/Core.Tests/Bix.Core.Tests.csproj
+++ b/src/Bix/Core.Tests/Bix.Core.Tests.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extras.Moq" Version="4.2.0" />
     <PackageReference Include="AutoFixture" Version="4.0.0-rc1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="Moq" Version="4.7.142" />
