--- a/src/Bix/Core.Tests/Bix.Core.Tests.csproj
+++ b/src/Bix/Core.Tests/Bix.Core.Tests.csproj
@@ -12,9 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extras.Moq" Version="4.2.0" />
-    <PackageReference Include="AutoFixture" Version="4.0.0-rc1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
-    <PackageReference Include="Moq" Version="4.7.142" />
+    <PackageReference Include="AutoFixture" Version="4.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="Moq" Version="4.8.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
