--- a/src/Bix/Core/Bix.Core.csproj
+++ b/src/Bix/Core/Bix.Core.csproj
@@ -17,6 +17,8 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Nito.AsyncEx.Coordination" Version="5.0.0-pre-05" />
+    <PackageReference Include="Nito.AsyncEx.Interop.WaitHandles" Version="5.0.0-pre-05" />
   </ItemGroup>
 
 </Project>
