--- a/src/Bix/IO.Tests/Bix.IO.Tests.csproj
+++ b/src/Bix/IO.Tests/Bix.IO.Tests.csproj
@@ -4,29 +4,18 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
-
-    <RootNamespace>Bix.Core</RootNamespace>
-
-    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac.Extras.Moq" Version="4.2.0" />
-    <PackageReference Include="AutoFixture" Version="4.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="Moq" Version="4.8.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
-	<DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Bix.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="IO\" />
+    <ProjectReference Include="..\IO\Bix.IO.csproj" />
   </ItemGroup>
 
 </Project>
