--- a/src/Bix/Repositories/Restful.HttpClient/Bix.Repositories.Restful.HttpClient.csproj
+++ b/src/Bix/Repositories/Restful.HttpClient/Bix.Repositories.Restful.HttpClient.csproj
@@ -15,11 +15,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Serilog" Version="2.6.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Http\Bix.Http.csproj" />
+    <ProjectReference Include="..\..\Core\Bix.Core.csproj" />
+    <ProjectReference Include="..\..\Http.Client\Bix.Http.Client.csproj" />
+    <ProjectReference Include="..\..\Http.Core\Bix.Http.Core.csproj" />
+    <ProjectReference Include="..\..\IO\Bix.IO.csproj" />
   </ItemGroup>
 
 </Project>
