--- a/src/Bix/Repositories/Restful.WebApi/Bix.Repositories.Restful.WebApi.csproj
+++ b/src/Bix/Repositories/Restful.WebApi/Bix.Repositories.Restful.WebApi.csproj
@@ -16,15 +16,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.0.2" />
-    <PackageReference Include="NodaTime" Version="2.2.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Bix.Core.csproj" />
-    <ProjectReference Include="..\..\Http\Bix.Http.csproj" />
+    <ProjectReference Include="..\..\IO\Bix.IO.csproj" />
+    <ProjectReference Include="..\..\WebApi.Core\Bix.WebApi.Core.csproj" />
   </ItemGroup>
 
 </Project>
