--- a/src/Bix/Repositories/EntityFramework/Bix.Repositories.EntityFramework.csproj
+++ b/src/Bix/Repositories/EntityFramework/Bix.Repositories.EntityFramework.csproj
@@ -3,20 +3,14 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
-    <Authors>Riley White</Authors>
-    <Company>Briollen</Company>
-    <Product>Bix</Product>
     <Description>Entity Framework Core repository framework for Bix</Description>
-    <Copyright>Copyright 2013-2017 Riley White</Copyright>
-    <PackageLicenseUrl>https://github.com/rileywhite/Bix/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/rileywhite/Bix</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/rileywhite/Bix.git</RepositoryUrl>
-    <PackageTags>bix business-mix entityframeworkcore entityframework</PackageTags>
   </PropertyGroup>
 
+  <Import Project="..\..\..\BixShared.targets" />
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
