--- a/src/Bix/Repositories/Restful.HttpClient/Bix.Repositories.Restful.HttpClient.csproj
+++ b/src/Bix/Repositories/Restful.HttpClient/Bix.Repositories.Restful.HttpClient.csproj
@@ -3,20 +3,14 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
-    <Authors>Riley White</Authors>
-    <Company>Briollen</Company>
-    <Product>Bix</Product>
     <Description>RESTful HTTP client repository framework for Bix</Description>
-    <Copyright>Copyright 2013-2017 Riley White</Copyright>
-    <PackageLicenseUrl>https://github.com/rileywhite/Bix/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/rileywhite/Bix</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/rileywhite/Bix.git</RepositoryUrl>
-    <PackageTags>bix business-mix restful-client</PackageTags>
   </PropertyGroup>
+
+  <Import Project="..\..\..\BixShared.targets" />
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="Serilog" Version="2.6.0" />
+    <PackageReference Include="Serilog" Version="2.7.1" />
   </ItemGroup>
 
   <ItemGroup>
