--- a/src/Bix/Autofac/Bix.Autofac.csproj
+++ b/src/Bix/Autofac/Bix.Autofac.csproj
@@ -3,20 +3,13 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageLicenseUrl>https://github.com/rileywhite/Bix/blob/master/LICENSE</PackageLicenseUrl>
-    <Copyright>Copyright 2013-2017 Riley White</Copyright>
-    <PackageProjectUrl>https://github.com/rileywhite/Bix</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/rileywhite/Bix.git</RepositoryUrl>
-    <Authors>Riley White</Authors>
-    <Company>Briollen</Company>
-    <Product>Bix</Product>
     <Description>Autofac support for Bix</Description>
-    <PackageTags>bix business-mix autofac</PackageTags>
   </PropertyGroup>
 
+  <Import Project="..\..\BixShared.targets" />
+
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.7.0" />
+    <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="HangFire.Autofac" Version="2.3.1" />
   </ItemGroup>
 
