--- a/src/Bix/Http.Client/Bix.Http.Client.csproj
+++ b/src/Bix/Http.Client/Bix.Http.Client.csproj
@@ -3,10 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
+    <Description>HTTP client tools for Bix</Description>
   </PropertyGroup>
 
+  <Import Project="..\..\BixShared.targets" />
+
   <ItemGroup>
-    <PackageReference Include="Serilog" Version="2.6.0" />
+    <PackageReference Include="Serilog" Version="2.7.1" />
   </ItemGroup>
 
   <ItemGroup>
