--- a/src/Bix/Http.Core/Bix.Http.Core.csproj
+++ b/src/Bix/Http.Core/Bix.Http.Core.csproj
@@ -3,19 +3,13 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
-    <Authors>Riley White</Authors>
-    <Company>Briollen</Company>
-    <Product>Bix</Product>
-    <Description>Http client and authentication tools for Bix</Description>
-    <Copyright>Copyright 2013-2017 Riley White</Copyright>
-    <PackageLicenseUrl>https://github.com/rileywhite/Bix/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/rileywhite/Bix</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/rileywhite/Bix.git</RepositoryUrl>
-    <PackageTags>bix business-mix http-authentication hmac</PackageTags>
+    <Description>Http tools for Bix</Description>
   </PropertyGroup>
 
+  <Import Project="..\..\BixShared.targets" />
+
   <ItemGroup>
-    <PackageReference Include="NodaTime" Version="2.2.5" />
+    <PackageReference Include="NodaTime" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
