--- a/src/Bix/IO.HttpClient/Bix.IO.HttpClient.csproj
+++ b/src/Bix/IO.HttpClient/Bix.IO.HttpClient.csproj
@@ -3,7 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
+    <Description>Network data transfer HTTP client for Bix</Description>
   </PropertyGroup>
+
+  <Import Project="..\..\BixShared.targets" />
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
