Fix XML doc file output path

--- a/src/BixShared.targets
+++ b/src/BixShared.targets
@@ -14,6 +14,6 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
-    <DocumentationFile>$(TargetDir)$(TargetName).xml</DocumentationFile>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 </Project>
