Remove generated part of version info

--- a/src/BixShared.targets
+++ b/src/BixShared.targets
@@ -10,7 +10,7 @@
     <PackageProjectUrl>https://github.com/rileywhite/Bix</PackageProjectUrl>
     <RepositoryUrl>https://github.com/rileywhite/Bix.git</RepositoryUrl>
     <PackageTags>bix business-mix restful webapi aspnetcore</PackageTags>
-    <Version>3.0.0-beta.1-build.123</Version><FileVersion>3.0.0.123</FileVersion>
+    <Version>3.0.0-beta.1</Version>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <PackageOutputPath>$(SolutionDir)..\packages\</PackageOutputPath>
